Update 'Tech stack' section and remove scrollbars from the entire app + 'About me' section fixes.

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,10 @@ footer {
     margin-bottom: 0.25rem;
 }
 
+* {
+    scrollbar-width: none;
+}
+
 @keyframes icon-spin {
     from {
         transform: rotateY(0deg);
