--- a/src/components/TechStack/TechStack.scss
+++ b/src/components/TechStack/TechStack.scss
@@ -30,9 +30,20 @@
         overflow: scroll;
     }
 
+    &>p {
+        font-size: 1.25rem;
+        font-weight: bold;
+        letter-spacing: 2px;
+        padding: 5rem;
+    }
+
     &>h3 {
         color: black;
         text-shadow: 0px 0px 2px gs.$main-color;
+    }
+
+    &>img {
+        animation: showImages 2s ease;
     }
 }
 
@@ -47,5 +58,15 @@
         opacity: 1;
         transform: translate(0%);
         transition: 0.5s;
+    }
+}
+
+@keyframes showImages {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
